<resources>
    <string name="app_name">StoryStream</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in_with_one_of_the_following_options">Log in with one of the following options.</string>
    <string name="log_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account? Sign up</string>
    <string name="back_button">back button</string>
    <string name="sign_in_with_google_button">Sign in with google button</string>
    <string name="sign_in_with_facebook_button">Sign in with facebook button</string>
    <string name="register">Register</string>
    <string name="register_with_one_of_the_following_options">Register with one of the following options.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="storybook">Storybook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="upgrade">Upgrade</string>
    <string name="explore">Explore</string>
    <string name="books">Books</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="top_rated">Top rated</string>
</resources>