<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back_button"
            android:background="@drawable/edit_text_default"
            android:layout_marginStart="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/register"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfo"
        app:layout_constraintTop_toBottomOf="@id/topContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/extra_light_gray"
        android:gravity="start"
        android:text="@string/register_with_one_of_the_following_options"/>


    <LinearLayout
        android:id="@+id/loginOptionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvInfo"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/sign_in_with_google_button"
            android:background="@drawable/edit_text_default"
            android:layout_marginEnd="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/sign_in_with_facebook_button"
            android:background="@drawable/edit_text_default"
            android:layout_marginEnd="20dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>




    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/extra_light_gray"
        app:layout_constraintTop_toBottomOf="@id/loginOptionsContainer"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/tvEmailError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Please enter a correct email address"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/error_red"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailCheck"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="gone"
        android:contentDescription="@string/back_button"
        android:background="@drawable/edit_text_default"
        app:layout_constraintTop_toTopOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintBottom_toBottomOf="@id/etEmail"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_check"
            app:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:paddingEnd="20dp"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/extra_light_gray"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/tvPasswordError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Your password is to short"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/error_red"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordCheck"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/back_button"
        android:visibility="gone"
        android:background="@drawable/edit_text_default"
        app:layout_constraintTop_toTopOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_check"
            app:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        app:layout_constraintBottom_toTopOf="@id/etRepeatPassword"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/etRepeatPassword"
        app:layout_constraintEnd_toEndOf="@id/etRepeatPassword"/>

    <EditText
        android:id="@+id/etRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:hint="@string/repeat_your_password"
        android:textColorHint="@color/extra_light_gray"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:id="@+id/tvRepeatPasswordError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Your passwords don't match"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/error_red"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="@id/etEmail"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordRepeatCheck"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/back_button"
        android:background="@drawable/edit_text_default"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/etRepeatPassword"
        app:layout_constraintEnd_toEndOf="@id/etRepeatPassword"
        app:layout_constraintBottom_toBottomOf="@id/etRepeatPassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_check"
            app:tint="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/gradient_style"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPassword"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/btnHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/extra_light_gray"
        android:gravity="center"
        android:text="@string/already_have_an_account_sign_in"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>