<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.fragments.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--ACTIONBAR SECTION-->
            <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/ivLogo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardCornerRadius="17.5dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_logo"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivLogo"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="26sp"
                android:text="@string/storybook"
                app:layout_constraintTop_toTopOf="@id/ivLogo"
                app:layout_constraintBottom_toBottomOf="@id/ivLogo"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/btnSearch"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnUser"
                android:src="@drawable/ic_search"
                android:scaleType="centerCrop"
                app:tint="@color/extra_light_gray" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnUser"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:cardCornerRadius="17.5dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/error_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/user"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

            <!--CATEGORY SECTION-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/actionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--NEW STORIES-->

            <TextView
                android:id="@+id/tvNewStories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="New stories"
                app:layout_constraintTop_toBottomOf="@id/rvCategories"
                android:layout_marginStart="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewStories"
                app:layout_constraintTop_toBottomOf="@id/tvNewStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                app:layout_constraintTop_toBottomOf="@id/rvNewStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/white"
                android:layout_marginTop="30dp"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorColor="@color/error_red"
                app:tabSelectedTextColor="@color/error_red"
                android:background="@color/black">


                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    />

        </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSelectedMediaType"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvTopRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/top_rated"
                app:layout_constraintTop_toBottomOf="@id/rvSelectedMediaType"
                android:layout_marginStart="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                app:layout_constraintTop_toBottomOf="@id/tvTopRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                app:layout_constraintTop_toBottomOf="@id/rvTopRated"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>

            <Button
                android:id="@+id/btnSignOut"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign out"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>